Fixed spacing issue for dropdown menu
The last update unintentionally altered the spacing for the dropdown menu because `.dropdown` and `.notification-dropdown` shared styles.
Changing one affected the other, which broke the dropdown profile menu.

This has been fixed by separating their styles so that `.notification-dropdown` works independently.

Previous version:

.dropdown,
.notification-dropdown {
    position: absolute;
    right: 10px;
    background: white;
    box-shadow: var(--box-shadow);
    cursor: pointer;
    padding: var(--size-lg); /* This change broke the dropdown profile menu */
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
}

Updated version (separating styles for the notification box):

.notification-dropdown {
    /* Positioning */
    width: 800px;
    height: 350px;
    overflow-y: scroll;
    overflow-x: hidden;
    padding: var(--size-sm);
}

--- a/static/css/css.css
+++ b/static/css/css.css
@@ -1,3 +1,4 @@
+<>
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
@@ -38,7 +39,7 @@ body {
 a {
     text-decoration: none;
     color: black;
-  
+
 }
 
 a:hover {
@@ -316,15 +317,7 @@ a:hover {
   }
 
 
-  .notification-dropdown {
-    /* positioning */
-    
-    width: 800px;
-    height: 350px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-   
-  }
+ 
 
   
 .dropdown,
@@ -335,7 +328,7 @@ a:hover {
     background: white;
     box-shadow: var(--box-shadow);
     cursor: pointer;
-    padding: var(--size-sm);
+    padding: var(--size-lg);
 
     opacity: 0;
     visibility: hidden;
@@ -354,6 +347,17 @@ a:hover {
     transition: opacity 0.3s ease-in-out, visibility 0s 0s;
 }
 
+
+.notification-dropdown {
+    /* positioning */
+    
+    width: 800px;
+    height: 350px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: var(--size-sm);
+   
+  }
 
   .profile-info {
 
@@ -458,12 +462,6 @@ a:hover {
     text-transform: capitalize;
     display: none;
     overflow: hidden;
-    border: 2px solid lavender;
- }
-
- .no-notification p {
-    opacity: 0.6;
-    font-stretch: expanded;
  }
 
  .no-notification img {
